--- a/index.html
+++ b/index.html
@@ -13,12 +13,15 @@
     <!-- bootstrap css link  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <!-- css file linkup  -->
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <!-- header section starts -->
-    <header>
-        <nav class="navbar navbar-expand-lg bg-light">
+    <header class="">
+        <!-- navigation bar  -->
+        <nav class="navbar navbar-expand-lg bg-light border-bottom">
             <div class="container-fluid">
                 <a class="navbar-brand h1 text-primary" href="#">Morning News</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -38,12 +41,33 @@
                 </div>
             </div>
         </nav>
+        <!-- category list -->
+        <div class="container my-3">
+            <ul id="category-list" class="d-flex justify-content-between ps-0">
+                <!-- categories -->
+            </ul>
+        </div>
     </header>
     <!-- header section ends -->
 
     <!-- main section starts -->
-    <main>
-
+    <main class="container my-4">
+        <!-- all news  -->
+        <div class="card mb-3">
+            <div class="row g-0">
+                <div class="col-md-4">
+                    <img src="..." class="img-fluid rounded-start" alt="...">
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                            additional content. This content is a little bit longer.</p>
+                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
     <!-- main section ends -->
 
@@ -60,7 +84,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
-    <!-- js file -->
+    <!-- js file linkup -->
     <script src="js/news.js"></script>
 </body>
 
