--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <!-- bootstrap css link  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <!-- font-awesome link  -->
+    <script src="https://kit.fontawesome.com/39872b7f1b.js" crossorigin="anonymous"></script>
     <!-- css file linkup  -->
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -53,8 +55,8 @@
     <!-- main section starts -->
     <main class="container my-4">
         <!-- all news  -->
-        <div class="card mb-3">
-            <div class="row g-0">
+        <div id="news-card" class="card mb-3 p-2">
+            <!-- <div class="row g-0">
                 <div class="col-md-4">
                     <img src="..." class="img-fluid rounded-start" alt="...">
                 </div>
@@ -66,7 +68,7 @@
                         <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
     </main>
     <!-- main section ends -->
