dynamic all news added

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <!-- main section starts -->
     <main class="container my-4">
         <!-- all news  -->
-        <div id="news-card" class="card mb-3 p-2">
+        <div id="news-card">
             <!-- <div class="row g-0">
                 <div class="col-md-4">
                     <img src="..." class="img-fluid rounded-start" alt="...">
