need to modify code

--- a/index.html
+++ b/index.html
@@ -5,11 +5,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Morning News</title>
-    <style>
-        /* .nav-item {
-            display: block !important;
-        } */
-    </style>
     <!-- bootstrap css link  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
@@ -25,7 +20,7 @@
         <!-- navigation bar  -->
         <nav class="navbar navbar-expand-lg bg-light border-bottom">
             <div class="container-fluid">
-                <a class="navbar-brand h1 text-primary" href="#">Morning News</a>
+                <a class="navbar-brand fs-3 fw-bold text-primary" href="#">Morning News</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -44,54 +39,61 @@
             </div>
         </nav>
         <!-- category list -->
-        <div class="container my-3">
-            <ul id="category-list" class="d-flex justify-content-between ps-0">
+        <section class="container my-3">
+            <ul id="category-list" class="list-group flex-row justify-content-between align-items-center">
                 <!-- categories -->
             </ul>
-        </div>
+        </section>
     </header>
     <!-- header section ends -->
 
     <!-- main section starts -->
     <main class="container my-4">
-        <!-- all news  -->
-        <div id="news-card">
-            <!-- news card  -->
-        </div>
+        <!-- all news section -->
+        <section id="news-card">
+            <!-- all news card -->
+        </section>
 
-        <!-- Button trigger modal -->
-        <!-- <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-            Launch demo modal
-        </button> -->
-
-        <!-- Modal -->
-        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalLabel"></h5>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body">
-                        <div id="news-detail"></div>
-                        <div id="info" class="d-flex justify-content-between mt-3">
-                            <!-- <p class="mb-0">hello</p>
-                            <p class="mb-0">bye</p> -->
+        <!-- modal section -->
+        <section>
+            <!-- Modal -->
+            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="exampleModalLabel"></h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        <div class="modal-body">
+                            <div id="news-detail"></div>
+                            <div id="info" class="d-flex justify-content-between mt-3">
+                                <p class="mb-0"></p>
+                                <p class="mb-0"></p>
+                            </div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
+
+        <!--  spinner  -->
+        <section id="spinner" class="d-none">
+            <div class="d-flex justify-content-center align-items-center" style="height: 300px;">
+                <div class="spinner-border text-primary" role="status">
+                    <span class="visually-hidden">Loading...</span>
+                </div>
+            </div>
+        </section>
 
     </main>
     <!-- main section ends -->
 
     <!-- footer section starts -->
     <footer>
-
     </footer>
     <!-- footer section ends -->
 
