--- a/index.html
+++ b/index.html
@@ -94,6 +94,9 @@
 
     <!-- footer section starts -->
     <footer>
+        <section class="border p-3 text-center bg-light">
+            <p class="fw-semibold">Copyright 2022 Morning News</p>
+        </section>
     </footer>
     <!-- footer section ends -->
 
