--- a/index.html
+++ b/index.html
@@ -47,27 +47,27 @@
 
     <!-- main section starts -->
 
-    <!-- sorting section  -->
-    <section class="container my-3">
-        <div class="border border-dark rounded my-3 d-flex align-items-center" style="height: 50px;">
-            <p id="sort-field" class="ms-3 mb-0">hello</p>
-        </div>
-        <div class="d-flex justify-content-between">
-            <div>
-                <p class="fs-5 fw-semibold">Sort By View:
-                    <button type="button" class="btn btn-outline-secondary" disabled>Default <i
-                            class="fa fa-angle-down ms-2"></i></button>
-                </p>
-            </div>
-            <div>
-                <button type="button" class="btn btn-primary">Today's Pick</button>
-                <button type="button" class="btn btn-outline-primary">Trending</button>
-            </div>
-        </div>
-    </section>
+    <main class="container">
 
+        <!-- sorting section  -->
+        <section class="mb-3">
+            <div class="border border-dark rounded my-3 d-flex align-items-center" style="height: 50px;">
+                <p id="sort-field" class="ms-3 mb-0">hello</p>
+            </div>
+            <div class="d-flex justify-content-between">
+                <div>
+                    <p class="fs-5 fw-semibold">Sort By View:
+                        <button type="button" class="btn btn-outline-secondary" disabled>Default <i
+                                class="fa fa-angle-down ms-2"></i></button>
+                    </p>
+                </div>
+                <div>
+                    <button type="button" class="btn btn-primary">Today's Pick</button>
+                    <button type="button" class="btn btn-outline-primary">Trending</button>
+                </div>
+            </div>
+        </section>
 
-    <main class="container my-4">
         <!-- all news section -->
         <section id="news-card">
             <!-- all news card -->
