--- a/blog.html
+++ b/blog.html
@@ -12,7 +12,7 @@
     <script src="https://kit.fontawesome.com/39872b7f1b.js" crossorigin="anonymous"></script>
 </head>
 
-<body>
+<body class="d-flex flex-column min-vh-100">
     <!-- header section starts -->
     <header class="">
         <!-- navigation bar  -->
@@ -27,10 +27,10 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="index.html">News</a>
+                            <a class="nav-link" href="index.html">News</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="blog.html">Blog</a>
+                            <a class="nav-link  active" aria-current="page" href="blog.html">Blog</a>
                         </li>
                     </ul>
                 </div>
@@ -40,11 +40,91 @@
     <!-- header section ends -->
 
     <!-- main section starts -->
+    <main class="container my-4">
+        <!-- accordion section -->
+        <h2 class="text-center mb-4">Most Common Frequently Asked Question Answer</h2>
+        <div class="accordion" id="accordionExample">
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="headingOne">
+                    <button class="accordion-button fs-5 fw-semibold" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                        Difference between var, let and const keywords in JavaScript?
+                    </button>
+                </h2>
+                <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+                    data-bs-parent="#accordionExample">
+                    <div class="accordion-body"><strong>Var</strong> can be updated and re-declared into the global
+                        scope. It can be declared without initialization. <strong>Let</strong> can be updated but cannot
+                        be re-declared into the block scope. It can be declared without initialization.
+                        <strong>Const</strong> cannot be updated or re-declared into the block scope. It cannot be
+                        declared without initialization.
+                    </div>
+                </div>
+            </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="headingTwo">
+                    <button class="accordion-button collapsed fs-5 fw-semibold" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                        Difference between regular function and arrow function in JavaScript?
+                    </button>
+                </h2>
+                <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                    data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                        <strong>Regular functions</strong> created using function declarations or expressions are
+                        constructible and
+                        callable. Since regular functions are constructible, they can be called using the new keyword.
+                        However, <strong>Arrow functions</strong> are only callable and not constructible, i.e arrow
+                        functions can
+                        never be used as constructor functions.
+                    </div>
+                </div>
+            </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="headingThree">
+                    <button class="accordion-button collapsed fs-5 fw-semibold" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                        Why use template string in JavaScript?
+                    </button>
+                </h2>
+                <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                    data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                        You can use template strings <strong>to write your string exactly how you want it to appear,
+                            without all
+                            the quotation marks and confusion.</strong> Template strings make it very easy to spot a
+                        missing space
+                        and make your string more readable.
+                    </div>
+                </div>
+            </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="headingFour">
+                    <button class="accordion-button collapsed fs-5 fw-semibold" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                        Difference between .map(), .forEach(), .filter() and .find() in JavaScript?
+                    </button>
+                </h2>
+                <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
+                    data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                        <strong>.map()</strong> executes the same code on every element in an array and returns a new
+                        array with the updated elements. <strong>.forEach()</strong> is used to execute the same code on
+                        every element in an array but does not change the array and it returns undefined.
+                        <strong>.filter()</strong> checks every element in an array to see if it meets a certain
+                        criteria and returns a new array with the elements that return truthy for the criteria.
+                        <strong>.find()</strong> checks every element in an array to see if it meets a certain criteria
+                        and returns the first element that return truthy for the criteria.
+                    </div>
+                </div>
+            </div>
+        </div>
 
+    </main>
     <!-- main section ends -->
 
     <!-- footer section starts -->
-    <footer>
+    <footer class="mt-auto">
         <section class="border p-3 text-center bg-light">
             <p class="fw-semibold">Copyright 2022 Morning News</p>
         </section>
