--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </nav>
         <!-- category list -->
         <section class="container my-3">
-            <ul id="category-list" class="list-group flex-row justify-content-between align-items-center">
+            <ul id="category-list" class="list-group flex-row justify-content-between align-items-center flex-wrap">
                 <!-- categories -->
             </ul>
         </section>
@@ -52,7 +52,7 @@
         <!-- sorting section  -->
         <section class="mb-3">
             <div class="border border-dark rounded my-3 d-flex align-items-center" style="height: 50px;">
-                <p id="sort-field" class="ms-3 mb-0">hello</p>
+                <p id="sort-field" class="ms-3 mb-0"></p>
             </div>
             <div class="d-flex justify-content-between">
                 <div>
